Fixed more spacing issues with Trending & Breaking News dividers

--- a/less/app.less
+++ b/less/app.less
@@ -210,7 +210,7 @@ h2 {
     font-weight: 600;
     color: #dc0002;
     text-transform: uppercase;
-    margin: 20 0 25px 0;
+    margin: 30px 0;
     padding: 0;
 		// Used for Portal Page  "Featured Multimedia"
 		//Updated 4/15/16, original = border:none, color,gray
