--- a/less/portal.less
+++ b/less/portal.less
@@ -586,12 +586,14 @@ h1.portal_title {
 .trending,
 .headline {
 	position: relative;
-	padding: 5px 5px;
+	padding: 18px 10px;
 	margin-right: -10px;
 	margin-left: -10px;
 	border-bottom: 1px solid #b9babc;
   overflow: hidden;
-	
+	.thumb {
+		margin-top:20px;
+	}
 }
 
 // article headlines
@@ -808,6 +810,10 @@ a.view-all-breaking-news {
     .trending {
       margin: 0 0 25px;
 			border-bottom: none;
+			padding: 0;
+			.thumb {
+				margin-top:0;
+			}
     }
   }
 	
